--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,2 +1,2 @@
 - date: 17. July 2019
-  headline: "WCreated the first version of the Pellizzeri Lab Website."
+  headline: "Created the first version of the Pellizzeri Lab Website."
