--- a/_data/students.yml
+++ b/_data/students.yml
@@ -8,9 +8,12 @@
 #  education3:
 #  education4:
 
-- name: Corne Koks
+- name: "This could be you !"
   photo: rock.jpg
-  info: Master student
-  email: -@Physics.LeidenUniv.nl
+  info: Contact Dr. Pellizzeri for more info
+  email: spellizzeri@eiu.edu
   number_educ: 0
   education1:
+  education2:
+  education3:
+  education4:
