--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,3 +1,13 @@
+#- name:
+#  photo: rock.jpg
+#  info:
+#  email:
+#  number_educ:
+#  education1:
+#  education2:
+#  education3:
+#  education4:
+
 - name: Dr. Steven Pellizzeri
   photo: Pellizzeri.jpg
   info: Assistant Professor, started Aug 2019
