--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,9 +1,9 @@
-- title: "Imaging doubled shot noise in a Josephson scanning tunneling microscope"
+- title: "Phosphonic acid and alkyl phosphate-derivatized resins for the simultaneous concentration and detection of uranium in environmental waters"
   image: PbSpub.png
   description: We have imaged the doubling of the current noise due to Andreev reflections in a Josephson scanning tunneling microscope.
-  authors: KM Bastiaans, D Cho, D Chatzopoulos, M Leeuwenhoek, C Koks, MP Allan
-  link: 
-    url: https://arxiv.org/abs/1907.05808
+  authors: Christine E. Duval; William A. Hardy; <\b>Steven Pellizzeri<\b>; Timothy A. DeVol; Scott M. Husson
+  link:
+    url: https://doi.org/10.1016/j.reactfunctpolym.2019.01.015
     display:  arxiv:1907.05808
   highlight: 1
   news2:
