--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,7 +1,7 @@
 - title: "Phosphonic acid and alkyl phosphate-derivatized resins for the simultaneous concentration and detection of uranium in environmental waters"
   image:
   description:
-  authors: CE Duval, WA Hardy, <b>S Pellizzeri</b>, TA DeVol, SM Husson
+  authors: CE Duval, WA Hardy, **S Pellizzeri**, TA DeVol, SM Husson
   link:
     url: https://doi.org/10.1016/j.reactfunctpolym.2019.01.015
     display:  React. Funct. Polym. 2019, 137, 133–139.
@@ -11,7 +11,7 @@
 - title: "Catalytic descriptors and electronic properties of single-site catalysts for ethene dimerization to 1-butene"
   image: Ethene.jpg
   description:
-  authors: <b>S Pellizzeri</b>, M Barona, V Bernales, P Miró, P Liao, L Gagliardi, RQ Snurr, RB Getman
+  authors: **S Pellizzeri**, M Barona, V Bernales, P Miró, P Liao, L Gagliardi, RQ Snurr, RB Getman
   link:
     url: https://doi.org/10.1016/j.cattod.2018.02.024
     display:  Catal. Today 2018, 312, 149–157.
