--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -5,6 +5,15 @@
   link:
     url: https://doi.org/10.1016/j.reactfunctpolym.2019.01.015
     display:  React. Funct. Polym. 2019, 137, 133–139.
-  year: 2019
   highlight: 0
+  news2:
+
+- title: "Catalytic descriptors and electronic properties of single-site catalysts for ethene dimerization to 1-butene"
+  image: Ethene.jpg
+  description:
+  authors: **S Pellizzeri**, M Barona, V Bernales, P Miró, P Liao, L Gagliardi, RQ Snurr, RB Getman
+  link:
+    url: https://doi.org/10.1016/j.cattod.2018.02.024
+    display:  Catal. Today 2018, 312, 149–157.
+  highlight: 1
   news2:
