--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -11,7 +11,7 @@
 - title: "Catalytic descriptors and electronic properties of single-site catalysts for ethene dimerization to 1-butene"
   image: Ethene.jpg
   description:
-  authors: **S Pellizzeri**, M Barona, V Bernales, P Miró, P Liao, L Gagliardi, RQ Snurr, RB Getman
+  authors: S Pellizzeri, M Barona, V Bernales, P Miró, P Liao, L Gagliardi, RQ Snurr, RB Getman
   link:
     url: https://doi.org/10.1016/j.cattod.2018.02.024
     display:  Catal. Today 2018, 312, 149–157.
