--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,6 +1,6 @@
 ---
 -
-  authors: "CE Duval, WA Hardy, **S Pellizzeri**, TA DeVol, SM Husson"
+  authors: "C.E. Duval, W.A. Hardy, **S. Pellizzeri**, T.A. DeVol, S.M. Husson"
   description: ~
   highlight: 0
   image: ~
@@ -11,7 +11,7 @@
   title: "Phosphonic acid and alkyl phosphate-derivatized resins for the simultaneous concentration and detection of uranium in environmental waters"
   year: 2019
 -
-  authors: "**S Pellizzeri**, M Barona, V Bernales, P Miró, P Liao, L Gagliardi, RQ Snurr, RB Getman"
+  authors: "**S. Pellizzeri**, M. Barona, V. Bernales, P. Miró, P. Liao, L. Gagliardi, R.Q. Snurr, R.B. Getman"
   description: ~
   highlight: 1
   image: Ethene.jpg
@@ -20,4 +20,15 @@
     url: "https://doi.org/10.1016/j.cattod.2018.02.024"
   news2: ~
   title: "Catalytic descriptors and electronic properties of single-site catalysts for ethene dimerization to 1-butene"
+  year: 2018
+-
+  authors: "I.S. Kim, Z. Li, J. Zheng, A.E. Platero‐Prats, A. Mavrandonakis, **S. Pellizzeri**, M. Ferrandon, A. Vjunov, L.C. Gallington, T.E. Webber, N.A. Vermeulen, R.L. Penn, R.B. Getman, C.J. Cramer, K.W. Chapman, D.M. Camaioni, J.L. Fulton, J.A. Lercher, O.K. Farha, J.T. Hupp, A.B.F. Martinson"
+  description: ~
+  highlight: 1
+  image: anie201708092-fig-0005-m.png
+  link:
+    display: "Angew. Chem. Int. Ed. 2018, 57, 909-913."
+    url: "https://doi.org/10.1002/anie.201708092"
+  news2: ~
+  title: "Sinter‐Resistant Platinum Catalyst Supported by Metal–Organic Framework"
   year: 2018
