--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -32,3 +32,14 @@
   news2: ~
   title: "Sinter‐Resistant Platinum Catalyst Supported by Metal–Organic Framework"
   year: 2018
+-
+  authors: "T.M. Smith Pellizzeri, C.D. McMillen, **S. Pellizzeri**, Y. Wen, R.B. Getman, G. Chumanov, J.W. Kolis"
+  description: ~
+  highlight: 1
+  image: 1-s2.0-S002245961730261X-fx1.jpeg
+  link:
+    display: "J. Solid State Chem. 2017, 255, 225–233"
+    url: "https://doi.org/10.1016/j.jssc.2017.07.008"
+  news2: ~
+  title: "Strontium manganese vanadates from hydrothermal brines: Synthesis and structure of Sr<sub>2</sub>Mn<sub>2</sub>(V<sub>3</sub>O<sub>10</sub>)(VO<sub>4</sub>), Sr<sub>3</sub>Mn(V<sub>2</sub>O<sub>7</sub>)<sub>2</sub>, and Sr<sub>2</sub>Mn(VO<sub>4</sub>)<sub>2</sub>(OH)"
+  year: 2017
