--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,6 +1,6 @@
 ---
 -
-  authors: "C.E. Duval, W.A. Hardy, **S. Pellizzeri**, T.A. DeVol, S.M. Husson"
+  authors: "C.E. Duval, W.A. Hardy*, **S. Pellizzeri**, T.A. DeVol, S.M. Husson"
   description: ~
   highlight: 0
   image: ~
