--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -36,7 +36,7 @@
   authors: "T.M. Smith Pellizzeri, C.D. McMillen, **S. Pellizzeri**, Y. Wen, R.B. Getman, G. Chumanov, J.W. Kolis"
   description: ~
   highlight: 1
-  image: 1-s20-S002245961730261X-fx1.jpeg
+  image: 1-s20-S002245961730261X-fx1.jpg
   link:
     display: "J. Solid State Chem. 2017, 255, 225–233"
     url: "https://doi.org/10.1016/j.jssc.2017.07.008"
