--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -18,7 +18,7 @@
   link:
     display: "Catal. Today 2018, 312, 149–157."
     url: "https://doi.org/10.1016/j.cattod.2018.02.024"
-  news2: Featured in Frontiers in Energy Research Newsletter <a href="https://www.energyfrontier.us/content/how-bypass-hill-when-calculating-better-synthesis-routes">
+  news2: <a href="https://www.energyfrontier.us/content/how-bypass-hill-when-calculating-better-synthesis-routes"> Featured in Frontiers in Energy Research Newsletter 
   title: "Catalytic descriptors and electronic properties of single-site catalysts for ethene dimerization to 1-butene"
   year: 2018
 -
@@ -29,7 +29,7 @@
   link:
     display: "Angew. Chem. Int. Ed. 2018, 57, 909-913."
     url: "https://doi.org/10.1002/anie.201708092"
-  news2: Featured in Frontiers in Energy Research Newsletter <a href="https://www.energyfrontier.us/content/when-less-more">
+  news2: <a href="https://www.energyfrontier.us/content/when-less-more"> Featured in Frontiers in Energy Research Newsletter
   title: "Sinter‐Resistant Platinum Catalyst Supported by Metal–Organic Framework"
   year: 2018
 -
