--- a/_data/pictures_Leiden.yml
+++ b/_data/pictures_Leiden.yml
@@ -1,2 +1,4 @@
 #- title:
-#  image: 
+#  image:
+- title: Teaching gen chem students about electron geometry using balloons.
+  image: D0WOR3_XcAAIu0J.jfif
