--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 20. July 2019
-  headline: "New Research paper is up on the removal of Gen-x and PFAS using a cationic polymer <a href='https://www.sciencedirect.com/science/article/pii/S0043135419306402'>!</a> <img src='/images/newspic/1-s2.0-S0043135419306402-fx1.jpg' class='img-responsive' style='max-width: 192px' />"
+  headline: "New Research paper is up on the <a href='https://www.sciencedirect.com/science/article/pii/S0043135419306402'>removal of Gen-x and PFAS using a cationic polymer!</a> <img src='/images/newspic/1-s2.0-S0043135419306402-fx1.jpg' class='img-responsive' style='max-width: 192px' />"
 
 - date: 17. July 2019
   headline: "Created the first version of the Pellizzeri Lab Website."
