--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -3,7 +3,7 @@
   authors: "H. Shabbir, **S. Pellizzeri**, M. Ferrandon, I.S. Kim, N.A. Vermeulen, O.K. Farha, M. Delferro, A.B.F Martinson, R.B. Getman"
   description: ~
   highlight: 1
-  image: ~
+  image: CatalSciTechnol2020.png
   link:
     display: "Catal. Sci. Technol., 2020,10, 3594-3602"
     url: "https://doi.org/10.1039/D0CY00394H"
