--- a/_data/students.yml
+++ b/_data/students.yml
@@ -8,6 +8,16 @@
 #  education3:
 #  education4:
 
+- name: Ryan Baker
+  photo: ~
+  info: Adsorption of disinfection byproducts on carbon
+  email: ~
+  number_educ: 1
+  education1: B.S. Chemistry, 2020
+  education2:
+  education3:
+  education4:
+
 - name: "This could be you !"
   photo: rock.jpg
   info: Contact Dr. Pellizzeri for more info
