--- a/_data/news.yml
+++ b/_data/news.yml
@@ -3,7 +3,7 @@
 - date: 22. April 2020
   headline: "Ryan Baker is awarded the Kieter fellowship, this paid fellowship allows him to do research over the summer. Congratulations Ryan!"
 - date: 06. Dec. 2019
-  headline: "New Research paper is up on the <a href='https://pubs.rsc.org/en/content/articlelanding/2020/DT/C9DT03389K'>Single crystal neutron and magnetic measurements of Rb2Mn3(VO4)2CO3 and K2Co3(VO4)2CO3 with mixed honeycomb and triangular magnetic lattices.</a>
+  headline: "New Research paper is up on the <a href='https://pubs.rsc.org/en/content/articlelanding/2020/DT/C9DT03389K'>Single crystal neutron and magnetic measurements of Rb<sub>2</sub>Mn</sub>3</sub>(VO<sub>4</sub>)2CO<sub>3</sub> and K<sub>2</sub>Co<sub>3</sub>(VO<sub>4</sub>)2CO<sub>3</sub> with mixed honeycomb and triangular magnetic lattices.</a>"
 - date: 20. July 2019
   headline: "New Research paper is up on the <a href='https://www.sciencedirect.com/science/article/pii/S0043135419306402'>removal of Gen-x and PFAS using a cationic polymer!</a> <img src='/images/newspic/1-s2.0-S0043135419306402-fx1.jpg' class='img-responsive' style='max-width: 192px' />"
 - date: 17. July 2019
