Adding Lab Photos

--- a/_data/pictures_Leiden.yml
+++ b/_data/pictures_Leiden.yml
@@ -2,3 +2,9 @@
 #  image:
 - title: Teaching gen chem students about electron geometry using balloons.
   image: D0WOR3_XcAAIu0J.jfif
+
+- title: Pictures of the lab space.
+  image: Lab_photo_1.jpg
+
+- title: Pictures of the lab space.
+  image: Lab_photo_2.jpg
