--- a/_data/M_students.yml
+++ b/_data/M_students.yml
@@ -9,7 +9,7 @@
 #  education4:
 
 - name: "This could be you !"
-  photo: rock.jpg
+  photo: TCBU.jpg
   info: Contact Dr. Pellizzeri for more info
   email: spellizzeri@eiu.edu
   number_educ: 0
