--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -9,9 +9,8 @@
 #  education4:
 
 - name: Ryan Baker
-  photo: TCBU.jpg
+  photo: TCBU.png
   info: Adsorption of disinfection byproducts on carbon
-#  email: ~
   number_educ: 1
   education1: B.S. Chemistry, 2021
   education2:
