--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -18,7 +18,7 @@
   education4:
 
 - name: "This could be you !"
-  photo: TCBU.jpg
+  photo: TCBU.png
   info: Contact Dr. Pellizzeri for more info
   email: spellizzeri@eiu.edu
   number_educ: 0
