--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -10,7 +10,8 @@
 
 - name: Ryan Baker
   photo: TCBU.png
-  info: Adsorption of disinfection byproducts on carbon
+  info: Adsorption of disinfection byproducts on carbon surfaces
+  email: rabaker2@eiu.edu
   number_educ: 1
   education1: B.S. Chemistry, 2021
   education2:
