ryan pic update

--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -9,7 +9,7 @@
 #  education4:
 
 - name: Ryan Baker
-  photo: Ryan Baker.jpg
+  photo: Ryan Baker v2.jpg
   info: Adsorption of disinfection byproducts on carbon surfaces
   email: rabaker2@eiu.edu
   number_educ: 1
