--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,7 @@
+- date: 4. March 2021
+  headline: "Dr. Pellizzeri was awarded a <a href='https://www.eiu.edu/grants/INTERNAL_CFR.php'>Summer Research/Creative Activity Award</a> from the EIU Council on Faculty Research, which will provide faculty support to conduct research over the summer of 2021."
+- date: 1. Jan. 2021
+  headline: "Would like to welcome an new undergraduate researcger to the group, George Barton"
 - date: 12. May 2020
   headline: "New Research paper is up on the <a href='https://pubs.rsc.org/en/content/articlelanding/2020/CY/D0CY00394H'>Influence of spin state and electron configuration on the active site and mechanism for catalytic hydrogenation on metal cation catalysts supported on NU-1000: insights from experiments and microkinetic modeling</a> <img src='/images/newspic/CatalSciTechnol2020.png' class='img-responsive' style='max-width: 192px' />"
 - date: 22. April 2020
