--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -13,19 +13,21 @@
   info: Adsorption of disinfection byproducts on carbon surfaces
   email: rabaker2@eiu.edu
   number_educ: 1
-  education1: B.S. Chemistry, 2021
-  education2:
+  education1: A.S. Chemistry, 2020, Lake Land College
+  education2: B.S. Chemistry, 2021
   education3:
   education4:
+  
 - name: George Barton
   photo: George Barton v2.jpg
   info: Non-oxidative coupling of methane on metal clusters
   email: gdbarton2@eiu.edu
   number_educ: 1
-  education1: B.S. Chemistry, 2023
-  education2:
+  education1: A.S. Chemistry, 2020, Parkland College  
+  education2:B.S. Chemistry, 2023
   education3:
   education4:
+  
 - name: "This could be you !"
   photo: TCBU.png
   info: Contact Dr. Pellizzeri for more info
