--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@
 
 version: 2
 updates:
-  - package-ecosystem: "Kramdown" # See documentation for possible values
+  - package-ecosystem: "kramdown" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
