--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -8,15 +8,6 @@
 #  education3:
 #  education4:
 
-- name: Ryan Baker
-  photo: Ryan Baker v2.jpg
-  info: Adsorption of disinfection byproducts on carbon surfaces
-  email: rabaker2@eiu.edu
-  number_educ: 2
-  education1: A.S. Chemistry, 2020, Lake Land College
-  education2: B.S. Chemistry, 2021
-  education3:
-  education4:
   
 - name: George Barton
   photo: George Barton v2.jpg
@@ -24,10 +15,30 @@
   email: gdbarton2@eiu.edu
   number_educ: 2
   education1: A.S. Chemistry, 2020, Parkland College  
-  education2: B.S. Chemistry, 2023
+  education2: B.S. Chemistry, 2023, EIU
   education3:
   education4:
   
+- name: Devin Craig
+  photo: TCBU.png
+  info: TBD
+  email: TBD
+  number_educ: 1
+  education1: B.S. Chemistry, 2023, EIU
+  education2: 
+  education3:
+  education4:
+
+- name: Elizabeth Serna-Sanchez
+  photo: TCBU.png
+  info: TBD
+  email: TBD
+  number_educ: 1
+  education1: B.S. Chemistry, 2023, EIU  
+  education2: 
+  education3:
+  education4:
+
 - name: "This could be you !"
   photo: TCBU.png
   info: Contact Dr. Pellizzeri for more info
