--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 8. May 2021
-  headline: "Ryan Graduated with his BS in Chemistry, _cum Laude_. He is heading to the university of Iowa to receive his Ph.D in Chemistry. Congratulations."
+  headline: "Ryan Graduated with his BS in Chemistry, <i>cum Laude</i>. He is heading to the university of Iowa to receive his Ph.D in Chemistry. Congratulations."
 - date: 4. March 2021
   headline: "Dr. Pellizzeri was awarded a <a href='https://www.eiu.edu/grants/INTERNAL_CFR.php'>Summer Research/Creative Activity Award</a> from the EIU Council on Faculty Research, which will provide faculty support to conduct research over the summer of 2021."
 - date: 1. Jan. 2021
