--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -11,7 +11,7 @@
   
 - name: George Barton
   photo: George Barton v2.jpg
-  info: Non-oxidative coupling of methane on metal clusters
+  info: Non-oxidative Coupling of Methane on Metal Clusters
   email: gdbarton2@eiu.edu
   number_educ: 2
   education1: A.S. Chemistry, 2020, Parkland College  
@@ -20,9 +20,9 @@
   education4:
   
 - name: Devin Craig
-  photo: TCBU.png
-  info: TBD
-  email: TBD
+  photo: Devin Craig v2.jpg
+  info: Modeling Optical Properties of Glaserites
+  email: dcraig@eiu.edu
   number_educ: 1
   education1: B.S. Chemistry, 2023, EIU
   education2: 
@@ -30,9 +30,9 @@
   education4:
 
 - name: Elizabeth Serna-Sanchez
-  photo: TCBU.png
-  info: TBD
-  email: TBD
+  photo: Elizabeth Serna-Sanchez v2.jpg
+  info: Determining Thermal Decomposition Pathways of PFAS
+  email: esernasanchez@eiu.edu
   number_educ: 1
   education1: B.S. Chemistry, 2023, EIU  
   education2: 
