--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,7 @@
+- date: 26. Aug. 2021
+  headline: "Would like to welcome two new undergraduate researchers to the group, Devin Craig and Elizabeth Serna-Sanchez"
+- date: 24. Aug. 2021
+  headline: "Dr. Pellizzeri presented Ryan's work modeling THM adsorption to graphenic strucutures at the ACS Fall 2021 National Meeting"  
 - date: 8. May 2021
   headline: "Ryan Graduated with his BS in Chemistry, <i>cum Laude</i>. He is heading to the university of Iowa to receive his Ph.D in Chemistry. Congratulations."
 - date: 4. March 2021
