--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,7 +1,9 @@
+- date: 22. Sept. 2021
+  headline: "Elizabeth Serna-Sanchez won the Society for the Advancement of Chicanos/Hispanics and Native Americans in Science (SACNAS) and Friends Outstanding Presentation award at the <a href='https://eciacs.org/conference'>6th Annual ECI ACS Undergraduate Research Conference</a> for her poster titled ""Modeling of the Thermal Decomposition Pathway of PFOA""
 - date: 26. Aug. 2021
   headline: "Would like to welcome two new undergraduate researchers to the group, Devin Craig and Elizabeth Serna-Sanchez"
 - date: 24. Aug. 2021
-  headline: "Dr. Pellizzeri presented Ryan's work modeling THM adsorption to graphenic strucutures at the ACS Fall 2021 National Meeting"  
+  headline: "Dr. Pellizzeri presented Ryan's work modeling THM adsorption to graphenic strucutures at the ACS Fall 2021 National Meeting"
 - date: 8. May 2021
   headline: "Ryan Graduated with his BS in Chemistry, <i>cum Laude</i>. He is heading to the university of Iowa to receive his Ph.D in Chemistry. Congratulations."
 - date: 4. March 2021
