--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 22. Sept. 2021
-  headline: "Elizabeth Serna-Sanchez won the Society for the Advancement of Chicanos/Hispanics and Native Americans in Science (SACNAS) and Friends Outstanding Presentation award at the <a href='https://eciacs.org/conference'>6th Annual ECI ACS Undergraduate Research Conference</a> for her poster titled ""Modeling of the Thermal Decomposition Pathway of PFOA""
+  headline: "Elizabeth Serna-Sanchez won the Society for the Advancement of Chicanos/Hispanics and Native Americans in Science (SACNAS) and Friends Outstanding Presentation award at the <a href='https://eciacs.org/conference'>6th Annual ECI ACS Undergraduate Research Conference</a> for her poster titled: Modeling of the Thermal Decomposition Pathway of PFOA"
 - date: 26. Aug. 2021
   headline: "Would like to welcome two new undergraduate researchers to the group, Devin Craig and Elizabeth Serna-Sanchez"
 - date: 24. Aug. 2021
