--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -15,5 +15,5 @@
   number_educ: 3
   education1: A.S. Chemistry, 2020, Lake Land College
   education2: B.S. Chemistry, 2021, EIU
-  education3: Ph.D. Chemistry, Starting Fall 2021, University of Iowa 
+  education3: Ph.D. Chemistry, Starting Fall 2021, University of Iowa, Shepherd group
   education4:
