--- a/_data/M_students.yml
+++ b/_data/M_students.yml
@@ -8,6 +8,16 @@
 #  education3:
 #  education4:
 
+- name: Brianna Haase
+  photo:
+  info: Non-oxidative Coupling of Methane on Modified Graphene
+  email: bphaase@eiu.edu
+  number_educ: 0
+  education1:
+  education2:
+  education3:
+  education4:
+
 - name: "This could be you !"
   photo: TCBU.png
   info: Contact Dr. Pellizzeri for more info
