--- a/_data/M_students.yml
+++ b/_data/M_students.yml
@@ -9,7 +9,7 @@
 #  education4:
 
 - name: Brianna Haase
-  photo: TCBU.png
+  photo: Brianna Haase v2.jpg
   info: Non-oxidative Coupling of Methane on Modified Graphene
   email: bphaase@eiu.edu
   number_educ: 0
