--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: 16. June 2022
+  headline: "Dr. Pellizzeri was awarded a ACS Petroleum Research Fund grant (PRF#65913-UNI6) in the amount of $55,000 for the period 9/1/2022 through 8/31/2024 in support of our research: Non-Oxidative Methane Coupling with Subnanometer Catalysts: Assessment of the Effects of Subnanometer Catalyst Configuration.<img src='/images/newspic/PRF-Logo-08.jpg' class='img-responsive' style='max-width: 192px' />"
 - date: 22. Sept. 2021
   headline: "Elizabeth Serna-Sanchez won the Society for the Advancement of Chicanos/Hispanics and Native Americans in Science (SACNAS) and Friends Outstanding Presentation award at the <a href='https://eciacs.org/conference'>6th Annual ECI ACS Undergraduate Research Conference</a> for her poster titled: Modeling of the Thermal Decomposition Pathway of PFOA"
 - date: 26. Aug. 2021
