--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -8,24 +8,24 @@
 #  education3:
 #  education4:
 
-  
+
 - name: George Barton
   photo: George Barton v2.jpg
   info: Non-oxidative Coupling of Methane on Metal Clusters
   email: gdbarton2@eiu.edu
   number_educ: 2
-  education1: A.S. Chemistry, 2020, Parkland College  
+  education1: A.S. Chemistry, 2020, Parkland College
   education2: B.S. Chemistry, 2023, EIU
   education3:
   education4:
-  
+
 - name: Devin Craig
   photo: Devin Craig v2.jpg
   info: Modeling Optical Properties of Glaserites
   email: dcraig@eiu.edu
   number_educ: 1
   education1: B.S. Chemistry, 2023, EIU
-  education2: 
+  education2:
   education3:
   education4:
 
@@ -34,8 +34,18 @@
   info: Determining Thermal Decomposition Pathways of PFAS
   email: esernasanchez@eiu.edu
   number_educ: 1
-  education1: B.S. Chemistry, 2023, EIU  
-  education2: 
+  education1: B.S. Chemistry, 2023, EIU
+  education2:
+  education3:
+  education4:
+
+- name: Ryan Wang
+  photo: TCBU.png
+  info: Non-oxidative Coupling of Methane on Metal Clusters
+  email: rwang@eiu.edu
+  number_educ: 1
+  education1: B.S. Chemistry, 2025, EIU
+  education2:
   education3:
   education4:
 
