--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -40,7 +40,7 @@
   education4:
 
 - name: Ryan Wang
-  photo: TCBU.png
+  photo: Ryan Wang.jpg
   info: Non-oxidative Coupling of Methane on Metal Clusters
   email: rwang@eiu.edu
   number_educ: 1
