--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,11 +1,23 @@
+- date: 9. Jan. 2023
+  headline: "Would like to welcome a new undergraduate researcher to the group, Lauren Hendershot."
+- date: 27. Dec. 2022
+  headline: "Brianna Haase's was awarded a Illinois Academy of Sciences research grand in the amount of $500 in support for research into the Invesitgation of CH<sub>4</sub> Activation on Modified Metalloporphyrin Graphen Sheets."
+- date: 1. Dec. 2022
+  headline: "Brianna Haase's was awarded a Fall 2022 Graduate School Research/Creative Activity Award by the Awards Committee of the Council on Graduate Studies at EIU in the amount of $300 in support for her research."
+- date: 12. Nov. 2022
+  headline: "Elizabeth Serna-Sanchez won the Wolfram Outstanding Student Presentation award at the <a href='https://eciacs.org/conference'>7th Annual ECI ACS Undergraduate Research Conference</a> for her poster titled: Mapping of the Thermal Decomposition of PFOA."
+- date: 12. Nov. 2022
+  headline: "George Barton won the Society for the Advancement of Chicanos/Hispanics and Native Americans in Science (SACNAS) and Friends Outstanding Presentation award at the <a href='https://eciacs.org/conference'>7th Annual ECI ACS Undergraduate Research Conference</a> for his poster titled: Modeling CO Adsorption of Platinum Nanocluster Ensembles on Graphene."
+- date: 22. Aug. 20223
+  headline: "Would like to welcome a new undergraduate researcher to the group, Ryan Wang."
 - date: 16. June 2022
   headline: "Dr. Pellizzeri was awarded a ACS Petroleum Research Fund grant (PRF#65913-UNI6) in the amount of $55,000 for the period 9/1/2022 through 8/31/2024 in support of our research: Non-Oxidative Methane Coupling with Subnanometer Catalysts: Assessment of the Effects of Subnanometer Catalyst Configuration.<img src='/images/newspic/PRF-Logo-08.jpg' class='img-responsive' style='max-width: 192px' />"
 - date: 22. Sept. 2021
-  headline: "Elizabeth Serna-Sanchez won the Society for the Advancement of Chicanos/Hispanics and Native Americans in Science (SACNAS) and Friends Outstanding Presentation award at the <a href='https://eciacs.org/conference'>6th Annual ECI ACS Undergraduate Research Conference</a> for her poster titled: Modeling of the Thermal Decomposition Pathway of PFOA"
+  headline: "Elizabeth Serna-Sanchez won the Society for the Advancement of Chicanos/Hispanics and Native Americans in Science (SACNAS) and Friends Outstanding Presentation award at the <a href='https://eciacs.org/conference'>6th Annual ECI ACS Undergraduate Research Conference</a> for her poster titled: Modeling of the Thermal Decomposition Pathway of PFOA."
 - date: 26. Aug. 2021
-  headline: "Would like to welcome two new undergraduate researchers to the group, Devin Craig and Elizabeth Serna-Sanchez"
+  headline: "Would like to welcome two new undergraduate researchers to the group, Devin Craig and Elizabeth Serna-Sanchez."
 - date: 24. Aug. 2021
-  headline: "Dr. Pellizzeri presented Ryan's work modeling THM adsorption to graphenic strucutures at the ACS Fall 2021 National Meeting"
+  headline: "Dr. Pellizzeri presented Ryan's work modeling THM adsorption to graphenic strucutures at the ACS Fall 2021 National Meeting."
 - date: 8. May 2021
   headline: "Ryan Graduated with his BS in Chemistry, <i>cum Laude</i>. He is heading to the university of Iowa to receive his Ph.D in Chemistry. Congratulations."
 - date: 4. March 2021
