--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,9 +1,13 @@
+- date: 1. June 2023
+  headline: "Would like to welcome a new undergraduate researcher to the group, Mark Boyd."  
+- date: 15. May 2023
+  headline: "George, Devin, and Elizabeth Graduated with their BS in Chemistry. Elizabeth is heading to Loyola University to receive her  Ph.D in Chemistry. Congratulations."
 - date: 9. Jan. 2023
   headline: "Would like to welcome a new undergraduate researcher to the group, Lauren Hendershot."
 - date: 27. Dec. 2022
-  headline: "Brianna Haase's was awarded a Illinois Academy of Sciences research grand in the amount of $500 in support for research into the Invesitgation of CH<sub>4</sub> Activation on Modified Metalloporphyrin Graphen Sheets."
+  headline: "Brianna Haase was awarded a Illinois Academy of Sciences research grand in the amount of $500 in support for research into the Invesitgation of CH<sub>4</sub> Activation on Modified Metalloporphyrin Graphen Sheets."
 - date: 1. Dec. 2022
-  headline: "Brianna Haase's was awarded a Fall 2022 Graduate School Research/Creative Activity Award by the Awards Committee of the Council on Graduate Studies at EIU in the amount of $300 in support for her research."
+  headline: "Brianna Haase was awarded a Fall 2022 Graduate School Research/Creative Activity Award by the Awards Committee of the Council on Graduate Studies at EIU in the amount of $300 in support for her research."
 - date: 12. Nov. 2022
   headline: "Elizabeth Serna-Sanchez won the Wolfram Outstanding Student Presentation award at the <a href='https://eciacs.org/conference'>7th Annual ECI ACS Undergraduate Research Conference</a> for her poster titled: Mapping of the Thermal Decomposition of PFOA."
 - date: 12. Nov. 2022
