--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -9,36 +9,6 @@
 #  education4:
 
 
-- name: George Barton
-  photo: George Barton v2.jpg
-  info: Non-oxidative Coupling of Methane on Metal Clusters
-  email: gdbarton2@eiu.edu
-  number_educ: 2
-  education1: A.S. Chemistry, 2020, Parkland College
-  education2: B.S. Chemistry, 2023, EIU
-  education3:
-  education4:
-
-- name: Devin Craig
-  photo: Devin Craig v2.jpg
-  info: Modeling Optical Properties of Glaserites
-  email: dcraig@eiu.edu
-  number_educ: 1
-  education1: B.S. Chemistry, 2023, EIU
-  education2:
-  education3:
-  education4:
-
-- name: Elizabeth Serna-Sanchez
-  photo: Elizabeth Serna-Sanchez v2.jpg
-  info: Determining Thermal Decomposition Pathways of PFAS
-  email: esernasanchez@eiu.edu
-  number_educ: 1
-  education1: B.S. Chemistry, 2023, EIU
-  education2:
-  education3:
-  education4:
-
 - name: Ryan Wang
   photo: Ryan Wang.jpg
   info: Non-oxidative Coupling of Methane on Metal Clusters
@@ -53,6 +23,16 @@
   photo: Lauren_Hendershot.jpg
   info: Non-oxidative Coupling of Methane on Metal Clusters
   email: lmhendershot@eiu.edu
+  number_educ: 1
+  education1: B.S. Chemistry, 2024, EIU
+  education2:
+  education3:
+  education4:
+
+- name: Mark Boyd
+  photo: Mark Boyd.jpg
+  info: Non-oxidative Coupling of Methane on Metal Clusters
+  email: mmboyd3@eiu.edu
   number_educ: 1
   education1: B.S. Chemistry, 2024, EIU
   education2:
