--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -17,3 +17,33 @@
   education2: B.S. Chemistry, 2021, EIU
   education3: Ph.D. Chemistry, Starting Fall 2021, University of Iowa, Shepherd group
   education4:
+  
+- name: George Barton
+  photo: George Barton v2.jpg
+  info: Non-oxidative Coupling of Methane on Metal Clusters
+  email: gdbarton2@eiu.edu
+  number_educ: 2
+  education1: A.S. Chemistry, 2020, Parkland College
+  education2: B.S. Chemistry, 2023, EIU
+  education3:
+  education4:
+
+- name: Devin Craig
+  photo: Devin Craig v2.jpg
+  info: Modeling Optical Properties of Glaserites
+  email: dcraig@eiu.edu
+  number_educ: 1
+  education1: B.S. Chemistry, 2023, EIU
+  education2:
+  education3:
+  education4:
+
+- name: Elizabeth Serna-Sanchez
+  photo: Elizabeth Serna-Sanchez v2.jpg
+  info: Determining Thermal Decomposition Pathways of PFAS
+  email: esernasanchez@eiu.edu
+  number_educ: 1
+  education1: B.S. Chemistry, 2023, EIU
+  education2: Ph.D. Chemistry, Starting Fall 2024, Loyola University,
+  education3:
+  education4:
