--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,7 @@
+- date: 30. Aug. 2023
+  headline: "First research paper of the Pellizzeri Group is up on the <a href='https://pubs.rsc.org/en/content/articlelanding/2023/ra/d3ra05187k'>Predicting pyrolysis decomposition of PFOA using computational nanoreactors: a thermodynamic study!</a> Congratulations to Elizabeth for all her hard work on this paper! <img src='/images/newspic/RSC2023.png' class='img-responsive' style='max-width: 192px' />"
+- date: 1. Aug. 2023
+  headline: "Would like to welcome a two new undergraduate researchers to the group, Sam Eccles and Jack Ebinger."  
 - date: 1. June 2023
   headline: "Would like to welcome a new undergraduate researcher to the group, Mark Boyd."  
 - date: 15. May 2023
@@ -29,12 +33,12 @@
 - date: 1. Jan. 2021
   headline: "Would like to welcome an new undergraduate researcher to the group, George Barton"
 - date: 12. May 2020
-  headline: "New Research paper is up on the <a href='https://pubs.rsc.org/en/content/articlelanding/2020/CY/D0CY00394H'>Influence of spin state and electron configuration on the active site and mechanism for catalytic hydrogenation on metal cation catalysts supported on NU-1000: insights from experiments and microkinetic modeling</a> <img src='/images/newspic/CatalSciTechnol2020.png' class='img-responsive' style='max-width: 192px' />"
+  headline: "New research paper is up on the <a href='https://pubs.rsc.org/en/content/articlelanding/2020/CY/D0CY00394H'>Influence of spin state and electron configuration on the active site and mechanism for catalytic hydrogenation on metal cation catalysts supported on NU-1000: insights from experiments and microkinetic modeling</a> <img src='/images/newspic/CatalSciTechnol2020.png' class='img-responsive' style='max-width: 192px' />"
 - date: 22. April 2020
   headline: "Ryan Baker is awarded the Kieter fellowship, this paid fellowship allows him to do research over the summer. Congratulations Ryan!"
 - date: 06. Dec. 2019
-  headline: "New Research paper is up on the <a href='https://pubs.rsc.org/en/content/articlelanding/2020/DT/C9DT03389K'>Single crystal neutron and magnetic measurements of Rb<sub>2</sub>Mn</sub>3</sub>(VO<sub>4</sub>)2CO<sub>3</sub> and K<sub>2</sub>Co<sub>3</sub>(VO<sub>4</sub>)2CO<sub>3</sub> with mixed honeycomb and triangular magnetic lattices.</a>"
+  headline: "New research paper is up on the <a href='https://pubs.rsc.org/en/content/articlelanding/2020/DT/C9DT03389K'>Single crystal neutron and magnetic measurements of Rb<sub>2</sub>Mn</sub>3</sub>(VO<sub>4</sub>)2CO<sub>3</sub> and K<sub>2</sub>Co<sub>3</sub>(VO<sub>4</sub>)2CO<sub>3</sub> with mixed honeycomb and triangular magnetic lattices.</a>"
 - date: 20. July 2019
-  headline: "New Research paper is up on the <a href='https://www.sciencedirect.com/science/article/pii/S0043135419306402'>removal of Gen-x and PFAS using a cationic polymer!</a> <img src='/images/newspic/1-s2.0-S0043135419306402-fx1.jpg' class='img-responsive' style='max-width: 192px' />"
+  headline: "New research paper is up on the <a href='https://www.sciencedirect.com/science/article/pii/S0043135419306402'>removal of Gen-x and PFAS using a cationic polymer!</a> <img src='/images/newspic/1-s2.0-S0043135419306402-fx1.jpg' class='img-responsive' style='max-width: 192px' />"
 - date: 17. July 2019
   headline: "Created the first version of the Pellizzeri Lab Website."
