--- a/_data/pictures_Leiden.yml
+++ b/_data/pictures_Leiden.yml
@@ -14,3 +14,12 @@
 
 - title: Photo with Dr. Molenium.
   image: 20230328_121343.jpg
+
+- title: George Barton at the 7th East Central IL ACS Undergraduate Research Conference, November 2023.
+  image: 20221112_153114.jpg
+  
+- title: Elizabeth Serna-Sanchez at the 7th East Central IL ACS Undergraduate Research Conference, November 2023.
+  image: 20221112_152402.jpg
+
+- title: Ryan Wang at the 7th East Central IL ACS Undergraduate Research Conference, November 2023.
+  image: 20221112_095533.jpg
