--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -47,3 +47,23 @@
   education2: Ph.D. Chemistry, Starting Fall 2024, Loyola University,
   education3:
   education4:
+
+- name: Brianna Haase
+  photo: Brianna Haase v2.jpg
+  info: Non-oxidative Coupling of Methane on Modified Graphene
+  email: bphaase@eiu.edu
+  number_educ: 1
+  education1: M.S Chemistry, 2023, EIU
+  education2:
+  education3:
+  education4:
+  
+- name: Ryan Wang
+  photo: Ryan Wang.jpg
+  info: Non-oxidative Coupling of Methane on Metal Clusters
+  email: rwang@eiu.edu
+  number_educ: 2
+  education1: B.S. Chemistry, EIU
+  education2: Transferred to Southern Illinois University
+  education3:
+  education4:
