--- a/_data/B_students.yml
+++ b/_data/B_students.yml
@@ -8,6 +8,26 @@
 #  education3:
 #  education4:
 
+- name: Akizia Aguilar
+  photo: Akizia_Aguilar.jpg
+  info: Non-oxidative Coupling of Methane on Metal Clusters
+  email: aaaguilar3@eiu.edu
+  number_educ: 1
+  education1: B.S. Chemistry, 2027, EIU
+  education2:
+  education3:
+  education4:
+
+- name: Genevieve Biberdorf
+  photo: Genevieve_Biberdorf.jpg
+  info: Determining Thermal Decomposition Pathways of PFAS
+  email: glbiberdorf@eiu.edu
+  number_educ: 1
+  education1: B.S. Chemistry, 2026, EIU
+  education2:
+  education3:
+  education4:  
+
 - name: Lauren Hendershot
   photo: Lauren_Hendershot.jpg
   info: Non-oxidative Coupling of Methane on Metal Clusters
