--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,7 +1,7 @@
 - date: 8. Jan. 2024
   headline: "Would like to welcome a two new undergraduate researchers to the group, Akizia Aguilar and Genevieve Biberdorf."  
 - date: 6. Nov. 2023
-  headline: "Jack Ebinger won the Wolfram Outstanding Student Presentation award at the <a href='https://eciacs.org/conference'>8th Annual ECI ACS Undergraduate Research Conference</a> for his poster titled: Decoding the Pyrolysis of Perfluorooctanoic Acid (PFOA): A Computational Nanoreactor Approach." <img src='/images/newspic/Jack_ECI.jpg' class='img-responsive' style='max-width: 192px' />"
+  headline: "Jack Ebinger won the Wolfram Outstanding Student Presentation award at the 8th Annual ECI ACS Undergraduate Research Conference</a> for his poster titled: Decoding the Pyrolysis of Perfluorooctanoic Acid (PFOA): A Computational Nanoreactor Approach." <img src='/images/newspic/Jack_ECI.jpg' class='img-responsive' style='max-width: 192px' />"
 - date: 30. Aug. 2023
   headline: "First research paper of the Pellizzeri Group is up on the <a href='https://pubs.rsc.org/en/content/articlelanding/2023/ra/d3ra05187k'>Predicting pyrolysis decomposition of PFOA using computational nanoreactors: a thermodynamic study!</a> Congratulations to Elizabeth for all her hard work on this paper! <img src='/images/newspic/RSC2023.png' class='img-responsive' style='max-width: 192px' />"
 - date: 1. Aug. 2023
